bpo-29386: Cleanup select_epoll_poll_impl()